@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-26T01:07:08Z",
+  "timestamp" : "2022-11-26T08:17:06Z",
   "count_outdated" : 670,
   "uniques_outdated" : 380,
-  "count" : 710,
-  "uniques" : 400,
+  "count" : 711,
+  "uniques" : 401,
   "clones" : [
     {
       "timestamp": "2022-11-12T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-11-25T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
