@@ -1,5 +1,5 @@
 {
-  "count": 40,
+  "count": 41,
   "uniques": 8,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-11-25T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-26T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
