@@ -1,3 +1,11 @@
+2022-11-26T08:17:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3552905875 # 1063
+* notice: last 14d: unq all: 8 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 380 670 / 400 710
+* notice: next accum: outdated-unq outdated-all / unq all: 380 670 / 401 711
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-26]
+
 2022-11-26T01:07:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3551578994 # 1062
 * notice: last 14d: unq all: 8 40
